--- a/src/index.css
+++ b/src/index.css
@@ -141,10 +141,10 @@ button:focus-visible {
 .scoreBoard {
   font-size: 24px;
   display: flex;
-  width: 500px;
+  width: auto;
   margin: 20px;
   justify-content: space-around;
-  flex: 1 1 50%;
+  flex: 1 1 auto;
 }
 
 .currentPlayer {
