--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
@@ -137,13 +141,23 @@ button:focus-visible {
   height: calc(100% - 40px);
   margin: 20px;
 } */
-.gameBox {
+/* .gameBox {
   display: flex;
   flex-wrap: wrap;
   justify-content: stretch;
   gap: 1rem;
   width: calc(100% - 40px);
   height: calc(100% - 40px);
+  margin: 20px;
+} */
+.gameBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: stretch;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+  flex: 1 1 auto;
   margin: 20px;
 }
 
@@ -193,6 +207,7 @@ button:focus-visible {
   height: 50%;
   /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
@@ -207,4 +222,16 @@ label {
   height: 100px;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.player2flip {
+  border: 2px solid blue;
+  background-color: blue;
+  transition: all 0.3s ease;
+}
+
+.player1flip {
+  border: 2px solid red;
+  background-color: red;
+  transition: all 0.3s ease;
 }
