--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,7 @@ button:focus-visible {
   transform: rotateY(180deg);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 1;
 }
 
 .flip-card-back > img {
@@ -152,11 +153,12 @@ button:focus-visible {
 
 .gameBox {
   display: grid;
-  /* align-items: space-around;
-  justify-items: space-around; */
-  justify-items: center;
-  align-items: center;
-  justify-content: center;
+  /* align-items: space-evenly;
+  justify-items: space-evenly; */
+  /* justify-items: center;
+  align-items: center; */
+  place-content: center;
+  place-items: center;
   /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));  */
   /* gap: 1rem; */
@@ -191,7 +193,7 @@ button:focus-visible {
 .scoreBoard {
   font-size: 32px;
   display: flex;
-  height: 100px;
+  /* height: 100px; */
   /* width: 100%; */
   /* margin: 20px; */
   justify-content: space-around;
@@ -209,13 +211,15 @@ button:focus-visible {
 
 .scoreBoard:hover {
   opacity: 1;
-  transform: scale(1.2);
-  transition: all 0.2s ease;
+  transform-origin: right bottom;
+  transform: scale(1.5);
+  transition: all 0.3s ease;
 }
 .scoreBoard:not(:hover) {
   opacity: 0.8;
+  transform-origin: right bottom;
   transform: scale(1);
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
 }
 
 .currentPlayer {
@@ -294,8 +298,8 @@ label {
   border: 1px solid black;
   color: black;
   border-radius: 5px;
-  width: 20px;
-  height: 30px;
+  width: 40px;
+  height: 60px;
   margin: auto;
   text-align: left;
   font-size: small;
@@ -330,8 +334,20 @@ label {
 .cardSizer {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  /* align-items: end; */
+  height: 150px;
+  width: 50px;
+}
+
+.cardSizer > h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
   height: 100px;
   width: 100px;
+  font-size: 42px;
 }
 
 span {
@@ -340,4 +356,24 @@ span {
   justify-content: space-between;
   align-items: space-around;
   gap: 20px;
+}
+
+.optionText {
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+  height: 30px;
+}
+
+.settings {
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: all 0.7s ease;
+}
+
+.settings:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
