--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ button:focus-visible {
 .flip-card-front {
   background-color: #bbb;
   color: black;
-  border-radius: 25px;
+  /* border-radius: 25px; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .flip-card-front > img {
@@ -139,7 +139,7 @@ button:focus-visible {
   background-color: white;
   color: white;
   transform: rotateY(180deg);
-  border-radius: 25px;
+  /* border-radius: 25px; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   z-index: 1;
 }
@@ -148,7 +148,7 @@ button:focus-visible {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 25px;
+  /* border-radius: 25px; */
 }
 
 .gameBox {
@@ -261,7 +261,7 @@ button:focus-visible {
   /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: space-around;
   align-items: center;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -282,13 +282,13 @@ label {
 }
 
 .player2flip {
-  border: 2px solid blue;
+  border: 6px solid blue;
   background-color: blue;
   transition: all 0.3s ease;
 }
 
 .player1flip {
-  border: 2px solid red;
+  border: 6px solid red;
   background-color: red;
   transition: all 0.3s ease;
 }
@@ -300,7 +300,7 @@ label {
   border-radius: 5px;
   width: 40px;
   height: 60px;
-  margin: auto;
+  /* margin: auto; */
   text-align: left;
   font-size: small;
   position: absolute;
@@ -376,4 +376,97 @@ span {
 .settings:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.gameMessage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.gameMessage > div {
+  text-align: center;
+  font-weight: 700;
+  /* background-color: red; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  font-size: 100px;
+  text-shadow: 10px 10px 20px rgba(0, 0, 0);
+  animation: fadeIn 2s linear forwards;
+  z-index: 3;
+}
+
+.resetButtons {
+  flex: 2 1 2;
+  position: absolute;
+  top: 70%;
+}
+
+.resetButtons > div {
+  margin: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: black;
+  border-radius: 10px;
+}
+
+.resetButtons > img {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  animation: fadeButton 3s linear;
+  /* animation: fadeButton 3s linear forwards; */
+  z-index: 3;
+  opacity: 0.8;
+  cursor: pointer;
+  padding: 10px;
+  margin: 50px;
+  margin-bottom: 10px;
+  transition: all 0.3s ease;
+}
+
+.resetButtons > img:hover {
+  background-color: lightgray;
+  /* opacity: 0.9; */
+}
+
+.gameMessage > .player1 {
+  color: red;
+}
+
+.gameMessage > .player2 {
+  color: blue;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(3);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeButton {
+  0% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.8;
+  }
 }
