--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,10 @@
 }
 
 #root {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center; */
   background: linear-gradient(160deg, white, indigo);
   height: 100vh;
   width: 100vw;
+  cursor: default;
 }
 
 a {
@@ -77,125 +74,9 @@ button:focus-visible {
   }
 }
 
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-  background-color: transparent;
-  width: minmax(30vh, 30vw);
-  height: minmax(30vh, 30vw);
-  /* width: 300px;
-  height: 300px; */
-  border-radius: 25px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  /* flex: 0 0 auto; */
-}
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card.active .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-  /* border-radius: 25px; */
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.flip-card-front > img {
-  width: 150px;
-  height: 150px;
-}
-.flip-card-front:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-  transition: all 0.3s ease;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-/* Style the back side */
-.flip-card-back {
-  background-color: white;
-  color: white;
-  transform: rotateY(180deg);
-  /* border-radius: 25px; */
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  z-index: 1;
-}
-
-.flip-card-back > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  /* border-radius: 25px; */
-}
-
-.gameBox {
-  display: grid;
-  /* align-items: space-evenly;
-  justify-items: space-evenly; */
-  /* justify-items: center;
-  align-items: center; */
-  place-content: center;
-  place-items: center;
-  /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));  */
-  /* gap: 1rem; */
-  /* width: 100%; */
-  /* width: calc(100% - 40px);
-  height: calc(100% - 40px); */
-  /* margin: 20px;*/
-}
-/* .gameBox {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: space-around;
-  gap: 1rem;
-  width: calc(100% - 40px);
-  height: calc(100% - 40px);
-  /* flex: 0 0 auto; */
-/* margin: 20px; */
-/* } */
-
-/* .gameBox {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: stretch;
-  gap: 1rem;
-  width: 100%;
-  height: 100%;
-  flex: 1 1 auto;
-  margin: 20px;
-} */
-
 .scoreBoard {
   font-size: 32px;
   display: flex;
-  /* height: 100px; */
-  /* width: 100%; */
-  /* margin: 20px; */
   justify-content: space-around;
   align-items: end;
   position: fixed;
@@ -205,21 +86,32 @@ button:focus-visible {
   background-color: white;
   padding: 10px;
   z-index: 1;
+  transition: all 0.3s ease;
+}
+
+.scoreBoard.vertical {
+  left: 0;
+}
+
+.scoreBoard.horizontal {
   border-radius: 10px 0 0 0;
-  /* flex: 0 0 auto; */
+  transform-origin: right bottom;
 }
 
 .scoreBoard:hover {
   opacity: 1;
-  transform-origin: right bottom;
-  transform: scale(1.5);
-  transition: all 0.3s ease;
 }
+
 .scoreBoard:not(:hover) {
   opacity: 0.8;
-  transform-origin: right bottom;
+}
+
+.scoreBoard.horizontal:hover {
+  transform: scale(1.5);
+}
+
+.scoreBoard.horizontal:not(:hover) {
   transform: scale(1);
-  transition: all 0.3s ease;
 }
 
 .currentPlayer {
@@ -258,13 +150,23 @@ button:focus-visible {
   left: 0%;
   width: 50%;
   height: 50%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
   justify-content: space-around;
   align-items: center;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.modalBackdrop {
+  /* height: 100vh;
+  width: 100vw; */
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(0, 0, 100, 0.5);
+  z-index: 9;
 }
 
 label {
@@ -281,18 +183,6 @@ label {
   cursor: pointer;
 }
 
-.player2flip {
-  border: 6px solid blue;
-  background-color: blue;
-  transition: all 0.3s ease;
-}
-
-.player1flip {
-  border: 6px solid red;
-  background-color: red;
-  transition: all 0.3s ease;
-}
-
 .settingCard {
   background-color: grey;
   border: 1px solid black;
@@ -300,12 +190,9 @@ label {
   border-radius: 5px;
   width: 40px;
   height: 60px;
-  /* margin: auto; */
   text-align: left;
   font-size: small;
   position: absolute;
-  /* left: 75%;
-  top: 50%; */
   transform-origin: center 500%;
 }
 
@@ -313,22 +200,31 @@ label {
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
-.cardGroup:hover > div {
-  background-color: pink;
-  border: 1px solid red;
-  color: red;
+.cardGroup:hover > div,
+.cardGroup:has(~ div:hover) > div {
+  background-color: rgb(88, 95, 174);
+  border: 1px solid navy;
+  color: navy;
   cursor: pointer;
   transition: all 0.2s ease;
 }
+
 .cardGroup:hover {
   transform: scale(1.05);
   transition: all 0.2s ease;
 }
 
+.cardGroup:hover > .highlightCard,
+.cardGroup:has(~ div:hover) > .highlightCard {
+  background-color: rgb(64, 70, 143);
+  border: 2px solid navy;
+  color: navy;
+}
+
 .highlightCard {
-  background-color: violet;
-  border: 1px solid purple;
-  color: purple;
+  background-color: rgb(64, 70, 143);
+  border: 2px solid indigo;
+  color: indigo;
 }
 
 .cardSizer {
@@ -376,97 +272,4 @@ span {
 .settings:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-}
-
-.gameMessage {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-.gameMessage > div {
-  text-align: center;
-  font-weight: 700;
-  /* background-color: red; */
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  font-size: 100px;
-  text-shadow: 10px 10px 20px rgba(0, 0, 0);
-  animation: fadeIn 2s linear forwards;
-  z-index: 3;
-}
-
-.resetButtons {
-  flex: 2 1 2;
-  position: absolute;
-  top: 70%;
-}
-
-.resetButtons > div {
-  margin: 0;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: black;
-  border-radius: 10px;
-}
-
-.resetButtons > img {
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
-    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-  animation: fadeButton 3s linear;
-  /* animation: fadeButton 3s linear forwards; */
-  z-index: 3;
-  opacity: 0.8;
-  cursor: pointer;
-  padding: 10px;
-  margin: 50px;
-  margin-bottom: 10px;
-  transition: all 0.3s ease;
-}
-
-.resetButtons > img:hover {
-  background-color: lightgray;
-  /* opacity: 0.9; */
-}
-
-.gameMessage > .player1 {
-  color: red;
-}
-
-.gameMessage > .player2 {
-  color: blue;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: scale(3);
-  }
-  50% {
-    opacity: 1;
-    transform: scale(2);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes fadeButton {
-  0% {
-    opacity: 0;
-  }
-  60% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0.8;
-  }
 }
