--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,79 +1,3 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  background: linear-gradient(160deg, white, indigo);
-  height: 100vh;
-  width: 100vw;
-  cursor: default;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
 .scoreBoard {
   font-size: 32px;
   display: flex;
@@ -99,19 +23,16 @@ button:focus-visible {
 }
 
 .scoreBoard:hover {
-  opacity: 1;
+  opacity: 0.9;
 }
 
 .scoreBoard:not(:hover) {
   opacity: 0.8;
+  transform: scale(1);
 }
 
 .scoreBoard.horizontal:hover {
   transform: scale(1.5);
-}
-
-.scoreBoard.horizontal:not(:hover) {
-  transform: scale(1);
 }
 
 .currentPlayer {
@@ -146,20 +67,22 @@ button:focus-visible {
 .modal {
   position: absolute;
   z-index: 10;
-  top: 25%;
-  left: 0%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 50%;
   height: 50%;
+  min-width: 450px;
+  min-height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  opacity: 0.9;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .modalBackdrop {
-  /* height: 100vh;
-  width: 100vw; */
   position: fixed;
   top: 0;
   bottom: 0;
@@ -177,10 +100,32 @@ label {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100px;
-  height: 100px;
+  width: 10vw;
+  height: 10vw;
+  max-width: 100px;
+  max-height: 100px;
+  min-width: 50px;
+  min-height: 50px;
   border-radius: 10px;
   cursor: pointer;
+}
+
+label > img {
+  width: 9vw;
+  height: 9vw;
+  max-width: 90px;
+  max-height: 90px;
+  min-width: 45px;
+  min-height: 45px;
+}
+
+.modal > svg {
+  width: 15vw;
+  height: 15vw;
+  max-width: 150px;
+  max-height: 150px;
+  min-width: 75px;
+  min-height: 75px;
 }
 
 .settingCard {
@@ -188,8 +133,12 @@ label {
   border: 1px solid black;
   color: black;
   border-radius: 5px;
-  width: 40px;
-  height: 60px;
+  width: 4vw;
+  height: 6vw;
+  max-width: 40px;
+  max-height: 60px;
+  min-width: 20px;
+  min-height: 30px;
   text-align: left;
   font-size: small;
   position: absolute;
@@ -231,7 +180,6 @@ label {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /* align-items: end; */
   height: 150px;
   width: 50px;
 }
